# python-template-base

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  python-security.yml  secret-scan.yml
docs/superpowers/plans/: 2026-04-01-python-template.md
docs/superpowers/specs/: 2026-04-01-python-template-design.md
python_template_base/: __init__.py
tests/: test_smoke.py
