[project]
name = "python-template-base"
version = "0.1.0"
description = "Minimal Python template for CLI/script projects"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.11.0",
    "mypy>=1.15.0",
    "pytest>=8.3.0",
    "pytest-cov>=6.1.0",
    "pip-audit>=2.9.0",
    "bandit>=1.9.4",
]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "SIM"]

[tool.mypy]
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
